@@ -23,7 +23,6 @@
 
 /*
  * @test
- * @enablePreview
  * @requires !vm.musl
  *
  * @library /test/lib
@@ -74,7 +73,6 @@ public class TestEnableNativeAccessDynamic extends TestEnableNativeAccessBase {
             Result expectedResult, boolean panamaModuleInBootLayer) throws Exception
     {
         List<String> list = new ArrayList<>();
-        list.add("--enable-preview");
         if (panamaModuleInBootLayer) {
             list.addAll(List.of("-p", MODULE_PATH));
             list.add("--add-modules=panama_module");
